Fixed too long titels causing viewport overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,4 +19,6 @@
   margin-top: 25px;
 }
 
- 
+.navbar .left {
+  overflow-x: hidden;
+}
